--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<div class="box">
 			<img src="resources/profile.png" alt="" class="box-img">
 			<h1>
-				Cooljackup
+				Zethical
 			</h1>
 			<h5>
-				- Junior Software Engineer -
+				- Software Engineer -
 			</h5>
 			<p>
 				I exist.. sometimes. I mainly am playing, making, or breaking things. <b><i>You can find me on these platforms below.</b></i>
@@ -23,7 +23,6 @@
 				<li><a href="https://github.com/Cooljackup" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
 				<li><a href="https://twitter.com/Cooljackup" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
 				<li><a href="https://www.reddit.com/u/Cooljackup" target="_blank"><i class="fa fa-reddit-square" aria-hidden="true"></i></a></li>
-				<li><a href="https://steamcommunity.com/id/Cooljackup" target="_blank"><i class="fa fa-steam-square" aria-hidden="true"></i></a></li>
 			</ul>
 		</div>
 	</body>
